applauncherd (1.1.0) unstable; urgency=low

  * Fixes: NB#262604 - applauncherd not buildable with eglibc 2.12
  * Fixes: NB#248543 - [SSU]:Error seen at 'invoker: error: Can't send signal to application: No such process '

 -- Juha Lintula <juha.lintula@nokia.com>  Tue, 14 Jun 2011 14:55:06 +0300

applauncherd (0.30.6) unstable; urgency=low

  * Changes: Added test cases for argument passing to cached [QM]Application.
  * Changes: Performance test modified. Tracking pixel co-ordinates changed.
  * Changes: Language corrections into documentation.
  * Changes: Added unittests for mbooster, qtbooster, ebooster, dbooster
  * Changes: Added unittests for SingleInstance
  * Changes: Added unittests for BoosterPluginRegistry

 -- Alexey Shilov <alexey.shilov@nokia.com>  Tue, 28 Jun 2011 13:55:48 +0300

applauncherd (0.30.5) stable; urgency=low

  * Fixes: NB#267391 - Boosting prevents QML apps from dropping the GL context on background

 -- Alexey Shilov <alexey.shilov@nokia.com>  Tue, 28 Jun 2011 13:28:30 +0300

applauncherd (0.30.4) stable; urgency=low

  * Fixes: NB#267579 - Socket file descriptor leaks in applauncherd.bin
  * Changes: Test for Socket file descriptor leaks in applauncherd.bin

 -- Juha Lintula <juha.lintula@nokia.com>  Mon, 27 Jun 2011 13:33:58 +0300

applauncherd (0.30.3) stable; urgency=low

  * Changes: single-instance documentation updated
  * Changes: Documentation updated according proof-reading results.
  * Changes: Added doc-base control files for documentation in applauncherd-doc package
  * Fixes: NB#267376 - [TASK] Defects found in applauncherd documentation after proof-reading should be corrected

 -- Juha Lintula <juha.lintula@nokia.com>  Mon, 20 Jun 2011 13:25:56 +0300

applauncherd (0.30.2) stable; urgency=low

  * Fixes: NB#257654 - QApplication::applicationDirPath() and QApplication::applicationFilePath() return wrong values for d-boosted applications