@@ -2,6 +2,7 @@ applauncherd (1.1.0) unstable; urgency=low
 
   * Fixes: NB#262604 - applauncherd not buildable with eglibc 2.12
   * Fixes: NB#248543 - [SSU]:Error seen at 'invoker: error: Can't send signal to application: No such process '
+  * Fixes: NB#273378 - Boosters should restore original signal handlers modified by applauncherd
 
  -- Juha Lintula <juha.lintula@nokia.com>  Tue, 14 Jun 2011 14:55:06 +0300
 
